# ignition_npp_tools

./: Cargo.toml  README.md  build.rs  ignition_npp_tools.rc
.github/workflows/: rust.yml
src/: def.rs  functions.rs  lib.rs  plugindata.rs
ui/: dialog.slint
