[package]
name = "ignition_npp_tools"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
regex = "1.9.1"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
slint = "1.1"

[build-dependencies]
#bindgen = "0.66"
slint-build = "1.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
#https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"